# PixelSyncOIT

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE-OpenCV  README.md  build-msvc.bat  build.sh  shell.nix
CMake/: FindSGL.cmake
Data/Models/: Monkey.binmesh  Monkey.mtl  dragon COPY.txt  dragon.binmesh
Data/Rings/: rings_1556287694.binpath  rings_1556287694.camera  rings_1556287723.binpath  rings_1556287723.camera
Data/Shaders/: Blit.glsl  GammaCorrection.glsl  GatherDummy.glsl  GaussianBlur.glsl  GlobalDefines.glsl  LinkedListClear.glsl  LinkedListGather.glsl  LinkedListHeader.glsl  LinkedListRender.glsl  Mesh.glsl  MultiVarCheckerboard.glsl  MultiVarColorBands.glsl  MultiVarFibers.glsl  MultiVarGeometryUtils.glsl  MultiVarGlobalVariables.glsl  MultiVarGlobalVertexInput.glsl  MultiVarOrientedColorBands.glsl  MultiVarOrientedStripes.glsl  MultiVarRolls.glsl  MultiVarShadingUtils.glsl  MultiVarTwistedRolls.glsl  PixelSyncClear.glsl  PixelSyncGather.glsl  PixelSyncHeader.glsl  PixelSyncRender.glsl  PseudoPhong.glsl  PseudoPhongHair.glsl  PseudoPhongPoints.glsl  PseudoPhongTrajectories.glsl  PseudoPhongTrajectoriesMultiVar.glsl  PseudoPhongTriangleScientific.glsl  PseudoPhongVorticity.glsl  ResolveMSAA.glsl  VertexAttributeNames.glsl  WhiteSolid.glsl
Data/Shaders/AT/: ATClear.glsl  ATGather.glsl  ATHeader.glsl  ATRender.glsl  ATResolve.glsl
Data/Shaders/AmbientOcclusion/: AmbientOcclusion.glsl  GenerateSSAOTexture.glsl  GeometryPassSSAO.glsl  VoxelAO.glsl
Data/Shaders/DepthComplexity/: DepthComplexityClear.glsl  DepthComplexityGather.glsl  DepthComplexityHeader.glsl  DepthComplexityResolve.glsl
Data/Shaders/DepthPeeling/: DepthPeelingBlit.glsl  DepthPeelingGather.glsl  DepthPeelingGatherDepthComplexity.glsl
Data/Shaders/GenerateTubeData/: CreateLineNormals.glsl  CreateTubePoints.glsl
Data/Shaders/HT/: HTClear.glsl  HTGather.glsl  HTHeader.glsl  HTResolve.glsl
Data/Shaders/KBuffer/: KBufferClear.glsl  KBufferGather.glsl  KBufferHeader.glsl  KBufferResolve.glsl  PixelSyncClear.glsl  PixelSyncGather.glsl  PixelSyncHeader.glsl  PixelSyncRender.glsl  PixelSyncResolve.glsl
Data/Shaders/LinkedList/: LinkedListClear.glsl  LinkedListGather.glsl  LinkedListHeader.glsl  LinkedListRender.glsl  LinkedListResolve.glsl  LinkedListSort.glsl
Data/Shaders/MBOIT/: ComplexAlgebra.glsl  MBOITBlend.glsl  MBOITGather.glsl  MBOITHeader.glsl  MBOITPass1.glsl  MBOITPass2.glsl  MBOITResolve.glsl  MomentMath.glsl  MomentOIT.glsl  TrigonometricMomentMath.glsl
Data/Shaders/MLAB/: MLABClear.glsl  MLABGather.glsl  MLABGatherOpacityMerge.glsl  MLABHeader.glsl  MLABResolve.glsl
Data/Shaders/MLABBucket/: MLABBucketClear.glsl  MLABBucketFunctions.glsl  MLABBucketFunctionsTransmittance.glsl  MLABBucketGather.glsl  MLABBucketHeader.glsl  MLABBucketResolve.glsl  MinDepthPass.glsl
Data/Shaders/MSM/: MSMComputeFactor.glsl  (+1 more)
Data/Trajectories/: single_streamline_1556310651.binpath  single_streamline_1556310651.camera  single_streamline_1556311125.binpath  single_streamline_1556311125.camera
Data/TransferFunctions/: 9213_streamlines_paper.xml  All.xml  All02.xml  AllBeige.xml  AneurismCurvature.xml  Aneurysm01.xml  Aneurysm_All.xml  Aneurysm_Step.xml  Bleuish.xml  BluePurple.xml  CR_All.xml  ColorDefaultOckerRed.xml  Colors01.xml  Colors02.xml  ColorsMichi01.xml  ConvectionRolls.xml  ConvectionRolls01.xml  ConvectionRollsLowRes.xml  ConvectionRollsLowRes2.xml  Convection_AlphaLow.xml  Convection_AlphaVeryLow.xml  Convection_Step.xml  DrivenCavity.xml  ErrorAneurysm.xml  ErrorAneurysm_Good.xml  ErrorConvectionRolls.xml  ErrorConvectionRolls2.xml  ErrorMLABDB.xml  ErrorRings.xml  ErrorTF.xml  ErrorTF2.xml  ErrorTFBlue.xml  GreenRed.xml  Hair.xml  LightBrownRed.xml  LightBrownRed_2.xml  MultiColor.xml  MultiColor2.xml  PaperAneurysm.xml  PaperCR.xml  (+35 more)
docs/license-libraries/: README.txt
src/: Main.cpp  MainApp.cpp  MainApp.hpp  MultiVarWindow.cpp  MultiVarWindow.hpp  TransferFunctionWindow.cpp  TransferFunctionWindow.hpp
src/AmbientOcclusion/: SSAO.cpp  SSAO.hpp  SSAOUtils.cpp  SSAOUtils.hpp  VoxelAO.cpp  VoxelAO.hpp
src/OIT/: BufferSizeWatch.cpp  BufferSizeWatch.hpp  OIT_AT.cpp  OIT_AT.hpp  OIT_DepthComplexity.cpp  OIT_DepthComplexity.hpp  OIT_DepthPeeling.cpp  OIT_DepthPeeling.hpp  OIT_Dummy.cpp  OIT_Dummy.hpp  OIT_HT.cpp  OIT_HT.hpp  OIT_KBuffer.cpp  OIT_KBuffer.hpp  OIT_LinkedList.cpp  OIT_LinkedList.hpp  OIT_MB.cpp  OIT_MB.hpp  OIT_MBOIT.cpp  OIT_MBOIT.hpp  OIT_MBOIT_Utils.cpp  OIT_MBOIT_Utils.hpp  OIT_MLAB.cpp  OIT_MLAB.hpp  OIT_MLABBucket.cpp  OIT_MLABBucket.hpp  OIT_PixelSync.cpp  OIT_PixelSync.hpp  OIT_Renderer.hpp  OIT_TestLoadStore.cpp  OIT_TestLoadStore.hpp  OIT_WBOIT.cpp  OIT_WBOIT.hpp  TilingMode.cpp  TilingMode.hpp
src/OpenCV/: gpu-basics-similarity.cpp  gpu-basics-similarity.hpp
src/Performance/: AutoPerfMeasurer.cpp  AutoPerfMeasurer.hpp  CsvParser.cpp  CsvParser.hpp  CsvWriter.cpp  CsvWriter.hpp  InternalState.cpp  InternalState.cpp.orig  InternalState.hpp  ReferenceMetric.cpp  ReferenceMetric.hpp
src/Raytracing/: OIT_RayTracing.cpp  OIT_RayTracing.hpp  RTRenderBackend.cpp  RTRenderBackend.hpp  RayTracingRenderer.cpp  RaytracingRenderer.hpp  helper.h
src/Shadows/: MomentShadowMapping.cpp  MomentShadowMapping.hpp  ShadowMapping.cpp  ShadowMapping.hpp  ShadowTechnique.cpp  ShadowTechnique.hpp
src/Tests/: TestPixelSyncPerformance.cpp  TestPixelSyncPerformance.hpp
src/Utils/: BezierCurve.cpp  BezierCurve.hpp  BinaryObjLoader.cpp  BinaryObjLoader.hpp  CameraPath.cpp  CameraPath.hpp  ComputeNormals.cpp  ComputeNormals.hpp  HairLoader.cpp  HairLoader.hpp  ImportanceCriteria.cpp  ImportanceCriteria.hpp  KDTree.cpp  KDTree.hpp  MeshSerializer.cpp  MeshSerializer.hpp  NetCDFConverter.cpp  NetCDFConverter.hpp  OBJLoader.cpp  OBJLoader.hpp  TrajectoryFile.cpp  TrajectoryFile.hpp  TrajectoryLoader.cpp  TrajectoryLoader.hpp  VideoWriter.cpp  VideoWriter.hpp
src/VoxelRaytracing/: OIT_VoxelRaytracing.cpp  OIT_VoxelRaytracing.hpp  VoxelCurveDiscretizer.cpp  VoxelCurveDiscretizer.hpp  VoxelData.cpp  VoxelData.hpp
(+47 files in other folders)
